fixtures/negative/missing_closing_delimiter.inc
---
title = Missing closing delimiter
name,score
Ada,21
